# ghoul

./: Cargo.toml
assets/models/: ghoul_room.glb
project_files/: ghoul_room.bbmodel
src/: game.rs  main.rs  util.rs
src/anim/: util.rs
src/audio/: ambient.rs  mod.rs  sound.rs
src/camera/: blackout.rs  control.rs  fly.rs  mod.rs  path.rs  zone.rs
src/debug/: mod.rs
src/loading/: mod.rs
src/scene/: computer_world.rs  mod.rs
src/ui/: boot_screen.rs  commands.rs  mod.rs  terminal.rs
