[package]
name = "ghoul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy-ascii = {git = "https://github.com/MrVintage710/bevy-ascii-effect.git"}
bevy-inspector-egui = "0.23.2"
bevy-debug-text-overlay = "8.1.0"
smooth-bevy-cameras = "0.11.0"
strum = "0.26.1"
strum_macros = "0.26"
